<?xml version="1.0"?>
<package format="2">
  <name>asv_joy_gazebo</name>
  <version>0.1.0</version>
  <description>
    This package contains a Gazebo world to demonstrate 
    the joystick and teleop plugins.
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>asv_joy_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
